_site/sql/hive/src/test/resources/ql/src/test/queries/negative/garbage.q
this is totally garbage SELECT src.key WHERE a lot of garbage
